# copilot

./: .gitignore  CMakeLists.txt
src/: deck.cc  deck.h  display.cc  display.h  flags.h  font.c  font.h  main.c  main.cc  renderer.c  renderer.h  slide.c  slide.h  string.c  string.h  style.h  window.c  window.h
src/view/: rect.h  style.c  style.h  view.c  view.h
